# plutus-apps

./: .gitattributes  .gitignore  .readthedocs.yml  .stylish-haskell.yaml  .tidyoperators  .tidyrc.json  .travis.yml  ARCHITECTURE.adoc  CODE_OF_CONDUCT.md  CONTRIBUTING.adoc  Dockerfile  README.adoc  README.md  Readme.md  STYLEGUIDE.adoc  cabal.project  cabal.project.freeze  ci.nix  ciJobs.nix  config.yaml  default.nix  deployment.nix  devEnv.sh  flake.nix  flake_old.nix  hydraJobs.nix  hysterical-screams.cabal  log  package.yaml  packages.dhall  packages.nix  purescript-bridge.cabal  release.nix  run.sh  scriv.ini  servant-purescript.cabal  shell  shell.nix  stack-7.10.yaml  stack-8.0.nix  (+5 more)
cardano-node-emulator/: CHANGELOG.md  cardano-node-emulator.cabal
cardano-node-emulator/changelog.d/: 20221208_181834_i_split_plutus_contract.md  20230116_160622_ak3n_remove_freer_extras_plutus_ledger.md  20230201_135624_sjoerd.visscher_PLT_1356_MaxCollateralInputs.md  20230302_122332_ak3n_drop_emulator_tx.md  20230321_142001_sjoerd.visscher_PLT_1582_Cardano_Node_Emulator_Plain.md  20230331_165428_sjoerd.visscher_plt_5389_mtl_contractmodel.md  20230418_172119_sjoerd.visscher_PLT_5512_emulator_logging.md  20230523_153415_sjoerd.visscher_PLT_5620_node_emulator_mtl_query_fns.md
cardano-node-emulator/test/: Spec.hs
cardano-node-socket-emulator/: cardano-node-socket-emulator.cabal
cardano-node-socket-emulator/app/: Main.hs
cardano-streaming/: cardano-streaming.cabal
cardano-streaming/changelog.d/: 20221207_115251_markus.lall_plt_171_wip.md
cardano-streaming/examples/: Common.hs  Example1.hs  Example2.hs  Example3.hs  Orphans.hs
doc/: BRANCHING-AND-RELEASE.adoc  README.md  conf.py  default.nix  expose-cardano-db-sync-socket.org  index.rst  plutus-doc.cabal  requirements.txt
doc/adr/: 0001-record-architecture-decisions.rst  0002-marconi-initiative.rst  0002-repository-standardization.rst  0003-marconi-monorepo.rst  0003-separate-marconi-repository.rst  0004-common-pab-api.rst  0004-marconi-initiative.rst  0004-pab-indexing-solution-integration.rst  0005-common-contract-api.rst  0005-pab-indexing-solution-integration.rst  0006-common-contract-api.rst  0006-support-reference-inputs-in-constraint-library.rst  0007-support-inline-datums-in-constraint-library.rst  0007-support-reference-inputs-in-constraint-library.rst  0008-support-inline-datums-in-constraint-library.rst  0008-support-reference-scripts-in-constraint-library.rst  0009-support-reference-scripts-in-constraint-library.rst  0009-support-return-and-total-collateral-when-building-transactions.rst  000X-marconi-indexer.rst  0010-commit-to-data-types-in-cardano-api.rst  0010-marconi-indexer-rollbacks.rst  0010-marconi-indexer.rst  0011-tx-validity-time-range-fix.rst  0012-commit-to-data-types-in-cardano-api.rst  0012-time-conversion.rst  0013-cardano-node-emulator.rst  0013-tx-validity-time-range-fix.rst  0014-end-to-end-testing-strategy.rst  0014-marconi-query-interface.rst  0016- end-to-end testing-strategy.rst  0016- end-to-end-testing-strategy.rst  0016-end-to-end-testing-strategy.rst  0018-Indexers-query-synchronisation-primitive.rst  0018-hearing-hysterical-streams.rst  0018-indexers-query-synchronisation-primitive.rst  0018-synchronising-queries-across-indexers-running-in-parallel.rst  index.rst
doc/plutus/: troubleshooting.rst
doc/reference/: examples.rst  glossary.rst  index.rst
freer-extras/: CHANGELOG.md  freer-extras.cabal
freer-extras/changelog.d/: 20230116_160818_ak3n_remove_freer_extras_plutus_ledger.md
freer-extras/test/: Spec.hs
marconi/: README.md  README_alpha-release.md  marconi.cabal
marconi-chain-index/: CHANGELOG.md  README.md  marconi-chain-index.cabal
marconi-chain-index/app/: Main.hs
marconi-chain-index/bench/: BenchQueries.hs
marconi-chain-index/changelog.d/: 20221205_182223_markus.lall_plt_171.md  20230130_134918_markus.l2ll_plt_357.md  20230208_195450_konstantinos.lambrou_PLT_1317_restructure_marconi_and_rewindable_index.md  20230208_200224_konstantinos.lambrou_PLT_1317_restructure_marconi_and_rewindable_index_v2.md  20230213_200010_konstantinos.lambrou_PLT_229_fix_resuming_of_utxo_indexer.md  20230217_094612_konstantinos.lambrou_PLT_1064_create_a_benchmark_suite_in_marconi_chain_index_for_analyzing_query_response_time_of_the_address_with_the_most_utxos.md  20230222_182400_kayvan_json_rpc_test.md  20230403_070417_nicolas.biri_current_indexed_slot.md  (+1 more)
marconi-chain-index/test/: Spec.hs  (+2 more)
marconi-core/: CHANGELOG.md  README.md  marconi-core.cabal
marconi-mamba/: README.md  marconi-mamba.cabal
marconi-sidechain/: CHANGELOG.md  README.md  marconi-sidechain.cabal
pab-blockfrost/: README.md  pab-blockfrost.cabal
playground-common/: CHANGELOG.md  playground-common.cabal
plutus-blockfrost/: README.md  plutus-blockfrost.cabal
plutus-chain-index/: README_alpha-release_Marconi.md  README_marconi.md  Setup.hs  plutus-chain-index.cabal
plutus-chain-index-core/: CHANGELOG.md  plutus-chain-index-core.cabal
plutus-contract/: ARCHITECTURE.adoc  CHANGELOG.md  README.md  plutus-contract.cabal
plutus-contract-certification/: ARCHITECTURE.adoc  README.md  plutus-contract-certification.cabal
plutus-contract-model/: plutus-contract-model.cabal
plutus-e2e-tests/: README.md  diff  plutus-e2e-tests.cabal
plutus-example/: README.md  plutus-example.cabal
plutus-hysterical-screams/: ChangeLog.md  README.md  hysterical-screams.cabal  plutus-hysterical-screams.cabal  stack.yaml
plutus-ledger/: CHANGELOG.md  plutus-ledger.cabal
plutus-ledger-constraints/: CHANGELOG.md  plutus-ledger-constraints.cabal
plutus-pab/: ARCHITECTURE.adoc  CHANGELOG.md  README.md  Setup.hs  mktx-dist.sh  plutus-pab.cabal  plutus-pab.yaml.sample
plutus-pab-executables/: CHANGELOG.md  README.md  plutus-pab-executables.cabal  plutus-pab.yaml.sample
plutus-pab-schema/: plutus-pab-schema.cabal
plutus-playground-server/: README.md  plutus-playground-server.cabal
plutus-script-evaluation-test/: plutus-script-evaluation-test.cabal
plutus-script-utils/: CHANGELOG.md  CHANGELOG.rst  plutus-script-utils.cabal
(+3856 files in other folders)
