name:                servant-purescript
version:             0.3.1.4
synopsis:            Generate PureScript accessor functions for you servant API
description:         Please see README.md
homepage:            https://github.com/eskimor/servant-purescript#readme
license:             BSD3
license-file:        LICENSE
author:              Robert Klotzner
maintainer:          robert Dot klotzner A T gmx Dot at
copyright:           Copyright: (c) 2016 Robert Klotzner
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

extra-source-files: Readme.md

library
  hs-source-dirs:      src
  exposed-modules:     Servant.PureScript.Internal
                     , Servant.PureScript.CodeGen
                     , Servant.PureScript.Subscriber
                     , Servant.PureScript.MakeRequests
                     , Servant.PureScript
                     , Servant.API.BrowserHeader

--  other-modules:       Main
  build-depends:       base >= 4.7 && < 6.0
                     , aeson >= 0.11.2
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , http-types
                     , lens
                     , mainland-pretty
                     , purescript-bridge >= 0.6
                     , servant
                     , servant-foreign
                     , servant-server
                     , servant-subscriber
                     , text
  default-language:    Haskell2010


test-suite servant-purescript-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aeson >= 0.11.2
                     , containers
                     , mainland-pretty
                     , lens
                     , purescript-bridge >= 0.6
                     , servant
                     , servant-foreign
                     , servant-purescript
                     , servant-subscriber
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/eskimor/servant-purescript
