cabal-version:       3.0
name:                servant-purescript
version:             0.9.0.2
synopsis:            Generate a PureScript API client for you servant API
description:         Please see README.md
homepage:            https://github.com/input-output-hk/servant-purescript
license:             BSD-3-Clause
license-file:        LICENSE
author:              Robert Klotzner
maintainer:          robert Dot klotzner A T gmx Dot at
copyright:           Copyright: (c) 2016 Robert Klotzner
category:            Web
build-type:          Simple

extra-source-files: Readme.md

library
  ghc-options:        -Wall
  hs-source-dirs:      src
  exposed-modules:     Servant.PureScript.Internal
                     , Servant.PureScript.CodeGen
                     , Servant.PureScript
                     , Servant.API.BrowserHeader

--  other-modules:       Main
  build-depends:       base >= 4.7 && < 6.0
                     , aeson >= 0.11.2
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , http-types
                     , lens
                     , mainland-pretty
                     , purescript-bridge
                     , servant
                     , servant-foreign
                     , servant-server
                     , text
  default-language:    Haskell2010


test-suite servant-purescript-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aeson >= 0.11.2
                     , containers
                     , hspec
                     , hspec-expectations-pretty-diff
                     , lens
                     , mainland-pretty
                     , purescript-bridge
                     , servant
                     , servant-foreign
                     , servant-purescript
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/input-output-hk/servant-purescript

source-repository-package
  type: git
  location: https://github.com/input-output-hk/purescript-bridge.git
  tag: 0cd3f0c7b560869de5d5d458591db7332e1f4996

