cabal-version: 3.0
name:          cardano-node-emulator
version:       1.2.0.0

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Widentities -Wincomplete-record-updates -Wunused-packages
    -Wincomplete-uni-patterns -Wnoncanonical-monad-instances
    -Wredundant-constraints -Wmissing-import-lists

library
  import:          lang
  hs-source-dirs:  src
  exposed-modules:
    Cardano.Node.Emulator
    Cardano.Node.Emulator.API
    Cardano.Node.Emulator.Generators
    Cardano.Node.Emulator.Internal.API
    Cardano.Node.Emulator.Internal.Node
    Cardano.Node.Emulator.Internal.Node.Chain
    Cardano.Node.Emulator.Internal.Node.Fee
    Cardano.Node.Emulator.Internal.Node.Params
    Cardano.Node.Emulator.Internal.Node.TimeSlot
    Cardano.Node.Emulator.Internal.Node.Validation
    Cardano.Node.Emulator.LogMessages
    Cardano.Node.Emulator.Test

  --------------------
  -- Local components
  --------------------
  build-depends:
    , freer-extras   >=1.2.0
    , plutus-ledger  >=1.2.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api:{cardano-api, gen}  ^>=8.2
    , cardano-crypto
    , cardano-ledger-alonzo
    , cardano-ledger-babbage
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-ledger-shelley-ma
    , cardano-slotting
    , mtl
    , ouroboros-consensus
    , plutus-core                     >=1.0.0
    , plutus-ledger-api               >=1.0.0
    , plutus-tx                       >=1.0.0
    , quickcheck-contractmodel        >=0.1.4.0

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson               >=2
    , array
    , base                >=4.9     && <5
    , bytestring
    , containers
    , data-default
    , either
    , freer-simple
    , hedgehog
    , lens
    , mtl
    , prettyprinter       >=1.1.0.1
    , QuickCheck
    , quickcheck-dynamic
    , serialise
    , strict-containers
    , text
    , time

test-suite cardano-node-emulator-test
  import:             lang
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost
  other-modules:
    Cardano.Node.Emulator.GeneratorsSpec
    Cardano.Node.Emulator.MTLSpec
    Plutus.Example.Game
    Plutus.Example.GameSpec

  --------------------
  -- Local components
  --------------------
  build-depends:
    , cardano-node-emulator  >=1.2.0
    , plutus-ledger          >=1.2.0
    , plutus-script-utils    >=1.2.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api
    , plutus-ledger-api  >=1.0.0
    , plutus-tx          >=1.0.0
    , plutus-tx-plugin   >=1.0.0

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , base                      >=4.9 && <5
    , bytestring
    , containers
    , data-default
    , hedgehog
    , lens
    , mtl
    , QuickCheck
    , quickcheck-contractmodel
    , quickcheck-dynamic
    , tasty
    , tasty-golden
    , tasty-hedgehog
    , tasty-hunit
    , tasty-quickcheck
    , text
