cabal-version: 3.0
name:          cardano-node-socket-emulator
version:       1.2.0.0

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Widentities -Wincomplete-record-updates -Wunused-packages
    -Wincomplete-uni-patterns -Wnoncanonical-monad-instances
    -Wredundant-constraints

library
  import:          lang
  hs-source-dirs:  src
  exposed-modules:
    Cardano.Node.Socket.Emulator
    Cardano.Node.Socket.Emulator.API
    Cardano.Node.Socket.Emulator.Mock
    Cardano.Node.Socket.Emulator.Params
    Cardano.Node.Socket.Emulator.Server
    Cardano.Node.Socket.Emulator.Types
    Plutus.Monitoring.Util

  --------------------
  -- Local components
  --------------------
  build-depends:
    , cardano-node-emulator  >=1.2.0
    , freer-extras           >=1.2.0
    , plutus-ledger          >=1.2.0
    , plutus-script-utils    >=1.2.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api                    >=8.0
    , cardano-ledger-allegra
    , cardano-ledger-alonzo
    , cardano-ledger-byron
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-ledger-shelley
    , cardano-slotting
    , cardano-strict-containers
    , cryptonite
    , exceptions
    , io-classes
    , iohk-monitoring
    , memory
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , ouroboros-consensus-diffusion
    , ouroboros-consensus-protocol
    , ouroboros-network
    , ouroboros-network-api
    , ouroboros-network-framework
    , ouroboros-network-protocols
    , plutus-core                    >=1.0.0
    , plutus-ledger-api              >=1.0.0
    , plutus-tx                      >=1.0.0
    , quickcheck-contractmodel       >=0.1.4.0
    , serialise
    , text-class
    , typed-protocols

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson           >=2
    , async
    , base            >=4.9 && <5
    , bytestring
    , containers
    , contra-tracer
    , data-default
    , freer-simple
    , lens
    , mtl
    , prettyprinter
    , servant
    , servant-client
    , servant-server
    , stm
    , text
    , time
    , time-units
    , warp

executable cardano-node-socket-emulator
  import:           lang
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  build-depends:    cardano-node-socket-emulator >=1.2.0
  build-depends:    iohk-monitoring
  build-depends:
    , base           >=4.9 && <5
    , data-default
    , prettyprinter
