cabal-version: 2.4
name:          cardano-streaming
version:       0.1.0.0
author:        Andrea Bedini
maintainer:    andrea.bedini@iohk.io

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-import-lists
    -Wnoncanonical-monad-instances -Wredundant-constraints
    -Wunused-packages

library
  import:          lang
  hs-source-dirs:  src
  exposed-modules: Cardano.Streaming

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api        >=1.35
    , ouroboros-network

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , async
    , base       >=4.9 && <5
    , streaming

executable cardano-streaming-example-1
  import:         lang
  hs-source-dirs: examples
  main-is:        Example1.hs
  other-modules:
    Common
    Orphans

  --------------------
  -- Local components
  --------------------
  build-depends:  cardano-streaming

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:  cardano-api >=1.35

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , base                  >=4.9 && <5
    , bytestring
    , optparse-applicative
    , streaming
    , text

executable cardano-streaming-example-2
  import:         lang
  hs-source-dirs: examples
  main-is:        Example2.hs
  other-modules:
    Common
    Orphans

  --------------------
  -- Local components
  --------------------
  build-depends:
    , cardano-streaming
    , plutus-ledger      >=1.0.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:  cardano-api >=1.35

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , base                  >=4.9 && <5
    , bytestring
    , optparse-applicative
    , streaming

executable cardano-streaming-example-3
  import:         lang
  hs-source-dirs: examples
  main-is:        Example3.hs
  other-modules:
    Common
    Orphans

  --------------------
  -- Local components
  --------------------
  build-depends:
    , cardano-streaming
    , plutus-chain-index-core  >=1.0.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:  cardano-api >=1.35

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , base                  >=4.9 && <5
    , bytestring
    , optparse-applicative
    , streaming
