cabal-version: 2.2
name:          plutus-doc
version:       1.2.0.0
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

maintainer:    jann.mueller@iohk.io
author:        Michael Peyton Jones, Jann Mueller
synopsis:      Plutus documentation
description:   Plutus documentation
category:      Language
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/plutus-apps

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    ScopedTypeVariables
    StandaloneDeriving

  -- See Plutus Tx readme for why we need the following flags:
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -Wmissing-import-lists -Wno-unused-imports -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

  if flag(defer-plugin-errors)

executable doc-doctests
  import:             lang

  if (impl(ghcjs) || os(windows))
    buildable: False

  hs-source-dirs:     plutus/tutorials plutus/howtos
  main-is:            Main.hs
  build-tool-depends: doctest:doctest
  other-modules:
    BasicAppConstraints
    BasicApps
    Escrow
    Escrow2
    Escrow3
    Escrow4
    Escrow5
    Escrow6
    EscrowImpl
    GameModel
    HandlingBlockchainEvents
    HelloWorldApp
    WriteScriptsTo

  --------------------
  -- Local components
  --------------------
  build-depends:
    , cardano-node-emulator    >=1.2.0
    , freer-extras             >=1.2.0
    , plutus-chain-index-core  >=1.2.0
    , plutus-contract          >=1.2.0
    , plutus-ledger            >=1.2.0
    , plutus-script-utils      >=1.2.0
    , plutus-tx-constraints    >=1.2.0
    , plutus-use-cases         >=1.2.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , plutus-core         >=1.0.0
    , plutus-ledger-api   >=1.0.0
    , plutus-tx           >=1.0.0
    , quickcheck-dynamic  >=3.0.0

  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin >=1.0.0

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , base              >=4.9      && <5
    , containers
    , data-default
    , lens
    , QuickCheck
    , random
    , tasty
    , tasty-quickcheck
    , template-haskell  >=2.13.0.0
    , text

test-suite basic-app
  import:         lang

  if (impl(ghcjs) || os(windows))
    buildable: False

  hs-source-dirs: plutus/tutorials
  main-is:        BasicAppsSpec.hs
  type:           exitcode-stdio-1.0
  other-modules:  BasicApps

  --------------------
  -- Local components
  --------------------
  build-depends:
    , cardano-node-emulator  >=1.2.0
    , freer-extras           >=1.2.0
    , plutus-contract        >=1.2.0
    , plutus-ledger          >=1.2.0
    , plutus-script-utils    >=1.2.0
    , plutus-tx-constraints  >=1.2.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , plutus-core        >=1.0.0
    , plutus-ledger-api  >=1.0.0
    , plutus-tx          >=1.0.0

  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin >=1.0.0

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , base              >=4.9      && <5
    , bytestring
    , containers
    , data-default
    , freer-simple
    , tasty
    , tasty-golden
    , template-haskell  >=2.13.0.0
    , text
