cabal-version: 2.2
name:          freer-extras
version:       0.1.0.0
synopsis:      Useful extensions to simple-freer
description:
  freer-extras provides logging and monitoring functions extending simple-freer

bug-reports:   https://github.com/input-output-hk/plutus-apps/issues
license:       Apache-2.0
license-file:  LICENSE
author:        Tobias Pflug
maintainer:    tobias.pflug@iohk.io
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/plutus-apps

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          lang
  hs-source-dirs:  src
  exposed-modules:
    Control.Monad.Freer.Extras
    Control.Monad.Freer.Extras.Beam
    Control.Monad.Freer.Extras.Log
    Control.Monad.Freer.Extras.Modify
    Control.Monad.Freer.Extras.Pagination
    Control.Monad.Freer.Extras.State
    Control.Monad.Freer.Extras.Stream

  build-depends:
    , aeson
    , base             >=4.7 && <5
    , beam-core
    , beam-sqlite
    , containers
    , data-default
    , freer-simple
    , iohk-monitoring
    , lens
    , mtl
    , openapi3
    , prettyprinter
    , resource-pool
    , sqlite-simple
    , streaming
    , text

test-suite freer-extras-test
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  other-modules:
    Control.Monad.Freer.Extras.BeamSpec
    Control.Monad.Freer.Extras.PaginationSpec

  build-depends:
    , hedgehog
    , tasty
    , tasty-hedgehog

  build-depends:
    , base           >=4.7 && <5
    , beam-core
    , beam-migrate
    , beam-sqlite
    , containers
    , contra-tracer
    , freer-extras
    , freer-simple
    , lens
    , resource-pool
    , semigroups
    , sqlite-simple
