cabal-version: 2.2
name:          freer-extras
version:       1.2.0.0
synopsis:      Useful extensions to simple-freer
description:
  freer-extras provides logging and monitoring functions extending simple-freer

bug-reports:   https://github.com/input-output-hk/plutus-apps/issues
license:       Apache-2.0
license-file:  LICENSE
author:        Tobias Pflug
maintainer:    tobias.pflug@iohk.io
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/plutus-apps

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          lang
  hs-source-dirs:  src
  exposed-modules:
    Control.Monad.Freer.Extras
    Control.Monad.Freer.Extras.Beam
    Control.Monad.Freer.Extras.Beam.Effects
    Control.Monad.Freer.Extras.Beam.Postgres
    Control.Monad.Freer.Extras.Beam.Sqlite
    Control.Monad.Freer.Extras.Log
    Control.Monad.Freer.Extras.Modify
    Control.Monad.Freer.Extras.Pagination
    Control.Monad.Freer.Extras.State
    Control.Monad.Freer.Extras.Stream

  other-modules:   Control.Monad.Freer.Extras.Beam.Common

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:   iohk-monitoring ^>=0.1.11.1

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson              >=2.0      && <2.2
    , base               >=4.7      && <5
    , beam-core          ^>=0.10.0.0
    , beam-postgres      ^>=0.5.3.0
    , beam-sqlite        ^>=0.5.2.0
    , containers         ^>=0.6.5.1
    , data-default       ^>=0.7.1.1
    , freer-simple       ^>=1.2.1.2
    , lens               >=4.19     && <4.20 || >=5.0 && <5.3
    , mtl                ^>=2.2.2
    , postgresql-simple  ^>=0.6.5
    , prettyprinter      ^>=1.7.1
    , resource-pool      >=0.2      && <0.5
    , sqlite-simple      ^>=0.4.18.2
    , streaming          ^>=0.2.3.1
    , text               ^>=1.2.4.1

test-suite freer-extras-test
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  other-modules:
    Control.Monad.Freer.Extras.BeamSpec
    Control.Monad.Freer.Extras.PaginationSpec

  ----------------------------
  -- Local components
  ----------------------------
  build-depends:  freer-extras >=1.2.0

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , base            >=4.7 && <5
    , beam-core
    , beam-migrate
    , beam-sqlite
    , containers
    , contra-tracer
    , freer-simple
    , hedgehog
    , lens
    , resource-pool
    , semigroups
    , sqlite-simple
    , tasty
    , tasty-hedgehog
